Actualización de la carpeta

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>Su propósito es <strong>optimizar el monitoreo</strong> de cultivos, invernaderos y entornos rurales en tiempo real.</p>
       <p>Diseñado para agricultores, ingenieros agrónomos y técnicos de campo que buscan mejorar la eficiencia y productividad.</p>
       <button class="btn-probar" onclick="location.href='main.html'">
-        <p>Probar Aquí</p>
+        Probar Aquí
         <img src="img/icono-flecha-abajo.png" alt="↓" />
       </button>
     </section>
