--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -61,49 +60,53 @@
           <h2>Huerto del Mirador</h2>
           <div class="tarjetas">
             <div class="tarjeta">
-              <img src="img/icono-sensores.png" alt="Humedad sólidos" />
+              <img src="img/icono-sensores.png" alt="Humedad en sólidos" />
               <p class="etiqueta">Humedad en sólidos</p>
-              <p class="valor">100%</p>
+              <p class="valor" id="soilPct">--%</p>
             </div>
             <div class="tarjeta">
-              <img src="img/icono-thermo.png" alt="Temperatura" />
-              <p class="etiqueta">Temperatura</p>
-              <p class="valor">35 °C</p>
+              <img src="img/icono-thermo.png" alt="Temperatura DS18B20" />
+              <p class="etiqueta">Temperatura DS18B20</p>
+              <p class="valor" id="tempDS18">-- °C</p>
             </div>
             <div class="tarjeta">
-              <img src="img/icono-sensores.png" alt="Humedad relativa" />
-              <p class="etiqueta">Humedad relativa</p>
-              <p class="valor">41%</p>
+              <img src="img/icono-sensores.png" alt="Humedad relativa DHT11" />
+              <p class="etiqueta">Humedad relativa DHT11</p>
+              <p class="valor" id="humDHT">--%</p>
             </div>
           </div>
-          <p class="ultima-actualizacion">Última actualización: 19/05/2025 – 21:32</p>
+          <p class="ultima-actualizacion">Última actualización: <span id="timestamp">--</span></p>
         </div>
-        <!-- Huerto del Romero -->
+        <!-- Huerto del Mirador -->
         <div class="huerto">
           <h2>Huerto del Romero</h2>
           <div class="tarjetas">
             <div class="tarjeta">
-              <img src="img/icono-sensores.png" alt="Humedad" />
-              <p class="etiqueta">Humedad</p>
-              <p class="valor">44%</p>
+              <img src="img/icono-sensores.png" alt="Humedad en sólidos" />
+              <p class="etiqueta">Humedad en sólidos</p>
+              <p class="valor" id="soilPct">--%</p>
             </div>
             <div class="tarjeta">
-              <img src="img/icono-thermo.png" alt="Temp. agua" />
-              <p class="etiqueta">Temperatura del agua</p>
-              <p class="valor">33 °C</p>
+              <img src="img/icono-thermo.png" alt="Temperatura DS18B20" />
+              <p class="etiqueta">Temperatura DS18B20</p>
+              <p class="valor" id="tempDS18">-- °C</p>
             </div>
             <div class="tarjeta">
-              <img src="img/icono-thermo.png" alt="Temp. ambiente" />
-              <p class="etiqueta">Temperatura ambiente</p>
-              <p class="valor">36 °C</p>
+              <img src="img/icono-sensores.png" alt="Humedad relativa DHT11" />
+              <p class="etiqueta">Humedad relativa DHT11</p>
+              <p class="valor" id="humDHT">--%</p>
             </div>
           </div>
-          <p class="ultima-actualizacion">Última actualización: 19/05/2025 – 21:20</p>
+          <p class="ultima-actualizacion">Última actualización: <span id="timestamp">--</span></p>
+        </div>
+        <div class="huerto">
+          <!-- ... contenido original ... -->
         </div>
       </section>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Módulo principal que importa servicios y lógica -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
