--- a/main.html
+++ b/main.html
@@ -1,3 +1,6 @@
+<!-- ===========================================
+  main.html con atributos para integración dinámica
+  =========================================== -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -20,6 +23,7 @@
   </header>
 
   <div class="contenedor-principal">
+    <!-- Sidebar -->
     <!-- Sidebar -->
     <nav id="barraLateral" class="barra-lateral">
       <ul class="lista-menu">
@@ -53,53 +57,57 @@
       </ul>
     </nav>
 
+
     <!-- Contenido principal -->
     <div class="main">
       <section class="contenido-dashboard">
+
         <!-- Huerto del Mirador -->
         <div class="huerto">
           <h2>Huerto del Mirador</h2>
           <div class="tarjetas">
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="suelo">
               <img src="img/icono-sensores.png" alt="Humedad sólidos" />
               <p class="etiqueta">Humedad en sólidos</p>
-              <p class="valor">100%</p>
+              <p class="valor">--</p>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="ds1820">
               <img src="img/icono-thermo.png" alt="Temperatura" />
               <p class="etiqueta">Temperatura</p>
-              <p class="valor">35 °C</p>
+              <p class="valor">--</p>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="luz">
               <img src="img/icono-sensores.png" alt="Humedad relativa" />
-              <p class="etiqueta">Humedad relativa</p>
-              <p class="valor">41%</p>
+              <p class="etiqueta">Luminosidad</p>
+              <p class="valor">--</p>
             </div>
           </div>
-          <p class="ultima-actualizacion">Última actualización: 19/05/2025 – 21:32</p>
+          <p class="ultima-actualizacion">Última actualización: --</p>
         </div>
+
         <!-- Huerto del Romero -->
         <div class="huerto">
           <h2>Huerto del Romero</h2>
           <div class="tarjetas">
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="suelo">
               <img src="img/icono-sensores.png" alt="Humedad" />
               <p class="etiqueta">Humedad</p>
-              <p class="valor">44%</p>
+              <p class="valor">--</p>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="ds1820">
               <img src="img/icono-thermo.png" alt="Temp. agua" />
               <p class="etiqueta">Temperatura del agua</p>
-              <p class="valor">33 °C</p>
+              <p class="valor">--</p>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta" data-endpoint="ds1820">
               <img src="img/icono-thermo.png" alt="Temp. ambiente" />
               <p class="etiqueta">Temperatura ambiente</p>
-              <p class="valor">36 °C</p>
+              <p class="valor">--</p>
             </div>
           </div>
-          <p class="ultima-actualizacion">Última actualización: 19/05/2025 – 21:20</p>
+          <p class="ultima-actualizacion">Última actualización: --</p>
         </div>
+
       </section>
     </div>
   </div>
